Made a couple changes to hopefully improve speed.